<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/joinBackButton"
                android:layout_width="0px"
                android:layout_height="50dip"
                android:layout_weight="50"
                android:background="#282828"
                android:text="@string/back_btn"
                android:textColor="#ffffff" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:text="@string/join_text_id" />

        <EditText
            android:id="@+id/joinId"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:text="@string/join_text_pw" />

        <EditText
            android:id="@+id/joinPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:text="@string/join_text_check_pw" />

        <EditText
            android:id="@+id/joinCheckPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:text="@string/join_text_nickname" />

        <EditText
            android:id="@+id/joinNickname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:text="@string/join_text_phone" />

        <EditText
            android:id="@+id/joinPhone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <Button
            android:id="@+id/joinNowButton"
            android:layout_width="90dip"
            android:layout_height="40dip"
            android:layout_gravity="center"
            android:background="#282828"
            android:text="@string/join_now_btn"
            android:textColor="#ffffff" />
    </LinearLayout>

</ScrollView>