<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#282828"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/joinButton"
            android:layout_width="0px"
            android:layout_height="40dip"
            android:layout_weight="50"
            android:background="#282828"
            android:text="@string/join_group_btn"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/backButton"
            android:layout_width="0px"
            android:layout_height="40dip"
            android:layout_weight="50"
            android:background="#282828"
            android:text="@string/back_btn"
            android:textColor="#ffffff" />
    </LinearLayout>
<!-- 그룹명 -->
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/group_name" 
        android:layout_marginLeft="10dip"
        android:layout_marginTop="10dip"/>
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:id="@+id/info_name"
        android:textSize="20dip"/>
    <!-- 생성일 -->
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/group_create_date" 
        android:layout_marginLeft="10dip"
        android:layout_marginTop="10dip"/>
    
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:id="@+id/info_create_date"
        android:textSize="20dip"/>
    <!-- 그룹인원 -->
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/group_number" 
        android:layout_marginLeft="10dip"
        android:layout_marginTop="10dip"/>
    
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:id="@+id/info_group_number"
        android:textSize="20dip"/>
    
    <!-- 그룹소개 -->
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_group_info" 
        android:layout_marginLeft="10dip"
        android:layout_marginTop="10dip"/>

    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:id="@+id/info_info"
        android:textSize="20dip"/>
</LinearLayout>