<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#282828"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/mapButton"
            android:layout_width="0px"
            android:layout_height="40dip"
            android:layout_weight="50"
            android:background="#282828"
            android:text="@string/map_btn"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/joinSecedeButton"
            android:layout_width="0px"
            android:layout_height="40dip"
            android:layout_weight="50"
            android:background="#282828"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/myGroupButton"
            android:layout_width="0px"
            android:layout_height="40dip"
            android:layout_weight="50"
            android:background="#282828"
            android:text="@string/my_group_btn"
            android:textColor="#ffffff" />
    </LinearLayout>
    <!-- 제목 -->

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginTop="10dip"
        android:text="@string/write_title" />

    <TextView
        android:id="@+id/meetingTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:textSize="20dip" />

    <!-- 작성자/생성날짜 -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="10dip"
            android:text="@string/login_text_id" />

        <TextView
            android:id="@+id/meetingUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:textSize="20dip" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="10dip"
            android:text="@string/group_name" />

        <TextView
            android:id="@+id/meetingGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:textSize="20dip" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginTop="10dip"
        android:text="@string/create_date" />

    <TextView
        android:id="@+id/meetingCreateDate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:textSize="20dip" />

    <!-- 내용 -->

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginTop="10dip"
        android:text="@string/write_content" />

    <TextView
        android:id="@+id/meetingContent"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:textSize="20dip" />
    <!-- 모임일 -->

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginTop="10dip"
        android:text="@string/write_date" />

    <TextView
        android:id="@+id/meetingDate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:textSize="20dip" />
    <!-- 장소 -->

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginTop="10dip"
        android:text="@string/write_loca" />

    <TextView
        android:id="@+id/meetingLoca"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:textSize="20dip" />

    <Button
        android:id="@+id/alarmSetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="알람 설정하기" />

</LinearLayout>