<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/joinButton"
            android:layout_width="0px"
            android:layout_height="50dip"
            android:layout_weight="50"
            android:background="#282828"
            android:text="@string/join_btn"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="0px"
            android:layout_height="50dip"
            android:layout_weight="50"
            android:background="#282828"
            android:text="@string/login_btn"
            android:textColor="#ffffff" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:text="@string/login_text_id" />

    <EditText
        android:id="@+id/loginId"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:text="@string/login_text_pw" />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword" />

</LinearLayout>