<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#282828"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/writeButton"
            android:layout_width="0px"
            android:layout_height="40dip"
            android:layout_weight="50"
            android:background="#282828"
            android:text="@string/write_btn"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/myGroupButton"
            android:layout_width="0px"
            android:layout_height="40dip"
            android:layout_weight="50"
            android:background="#282828"
            android:text="@string/my_group_btn"
            android:textColor="#ffffff" />
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_meeting" />

    <ListView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:background="#eeeeee"
        android:id="@+id/attendance_group" >
        
    </ListView>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_meeting" />

    <ListView
        android:layout_width="fill_parent"
        android:layout_height="150dip"
        android:layout_margin="10dip"
        android:background="#eeeeee" 
        android:id="@+id/new_group_board">
    </ListView>

</LinearLayout>