<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#282828"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/makeGroupButton"
            android:layout_width="0px"
            android:layout_height="40dip"
            android:layout_weight="50"
            android:background="#282828"
            android:text="@string/make_group_btn"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/findGroupButton"
            android:layout_width="0px"
            android:layout_height="40dip"
            android:layout_weight="50"
            android:background="#282828"
            android:text="@string/find_group_btn"
            android:textColor="#ffffff" />
        
        <Button
            android:id="@+id/secedeGroupButton"
            android:layout_width="0px"
            android:layout_height="40dip"
            android:layout_weight="50"
            android:background="#282828"
            android:text="@string/secede_group_btn"
            android:textColor="#ffffff" />
    </LinearLayout>
    

    
 	<ListView 
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
 	    android:id="@+id/myJoinedGroupList"></ListView>

</LinearLayout>